Thu Aug 23 16:26:47 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_finalize): 
	* gtk/gtktextmark.c (gtk_text_mark_finalize): chain parent class
	handlers, pointed out by Joshua N Pritikin <vishnu@pobox.com>.

Wed Aug 22 19:15:39 2001  Owen Taylor  <otaylor@redhat.com>

	[ Patch from Sebastian Wilhelmi, 52790 ]

	* gtk/gtkversion.h.in gtk/gtk.h: New file replacing gtkcompat.h

	* gdk/gdkcompat.h gdk/gdk*.h gtk/gtkcompat.h.in gtk/gtk*.h: 
	Move compatibility macros from g[dt]kcompat.h to within 
	#ifndef G[DT]K_DISABLE_DEPRECATED in each file.

	* gdk/gdk-pixbuf-csource.c: Fix up include of gtkcompat.h.

	* demos/Makefile.am demos/gtk-demo/Makefile.am 
	  docs/reference/gdk-pixbuf/Makefile.am modules/input/Makefile.am
	  tests/Makefile.am: Remove references to -G[DT]K_DISABLE_DEPRECATED.

	* demos/{pixbuf-demo.c,testpixbuf-drawable.c,testpixbuf-save.c,
	         testpixbuf.c}: Fix usages of deprecated functions.

Wed Aug 22 19:03:27 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_set_model): clean up selection
	when changing models.

Wed Aug 22 18:25:46 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c: Fix selection.  I think it's all dandy now.
	We check the current event for modifiers rather than try to trap
	all presses.

2001-08-22  Anders Carlsson  <andersca@gnu.org>

	* gtk/gtkliststore.h (GTK_LIST_STORE_CLASS): Fix a small typo.
	It's LIST_STORE, not LISTSTORE.

Tue Aug 21 12:43:29 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtk.h: Remove commented out gtkpacker reference.

2001-08-21  Matthias Clasen  <matthiasc@waldgeist.poet.de>

	* configure.in (all_loaders): Add tga loader, 
	patch by Nicola Girardi. (#56067)

Tue Aug 21 02:57:13 2001  Jonathan Blandford  <jrb@redhat.com>>

	* gtk/gtktreeview.c (gtk_tree_view_button_press): Fix up selection
	a little.  More needs to be done tomorrow.

Tue Aug 21 00:45:55 2001  Jonathan Blandford  <jrb@redhat.com>
