@@ -79,7 +79,7 @@ gtk_tree_sortable_sort_column_changed (GtkTreeSortable *sortable)
 gboolean
 gtk_tree_sortable_get_sort_column_id (GtkTreeSortable  *sortable,
 				      gint             *sort_column_id,
-				      GtkTreeSortOrder *order)
+				      GtkSortType      *order)
 {
   GtkTreeSortableIface *iface;
 
@@ -96,7 +96,7 @@ gtk_tree_sortable_get_sort_column_id (GtkTreeSortable  *sortable,
 void
 gtk_tree_sortable_set_sort_column_id (GtkTreeSortable  *sortable,
 				      gint              sort_column_id,
-				      GtkTreeSortOrder  order)
+				      GtkSortType       order)
 {
   GtkTreeSortableIface *iface;
 
