@@ -268,8 +268,8 @@ gtk_tree_view_column_class_init (GtkTreeViewColumnClass *class)
                                    g_param_spec_enum ("sort_order",
                                                       _("Sort order"),
                                                       _("Sort direction the sort indicator should indicate"),
-                                                      GTK_TYPE_TREE_SORT_ORDER,
-                                                      GTK_TREE_SORT_ASCENDING,
+                                                      GTK_TYPE_SORT_TYPE,
+                                                      GTK_SORT_ASCENDING,
                                                       G_PARAM_READABLE | G_PARAM_WRITABLE));
   
 }
@@ -287,7 +287,7 @@ gtk_tree_view_column_init (GtkTreeViewColumn *tree_column)
   tree_column->visible = TRUE;
   tree_column->clickable = FALSE;
   tree_column->dirty = TRUE;
-  tree_column->sort_order = GTK_TREE_SORT_ASCENDING;
+  tree_column->sort_order = GTK_SORT_ASCENDING;
   tree_column->show_sort_indicator = FALSE;
   tree_column->property_changed_signal = 0;
   tree_column->sort_clicked_signal = 0;
@@ -599,13 +599,13 @@ gtk_tree_view_column_update_button (GtkTreeViewColumn *tree_column)
 
   switch (tree_column->sort_order)
     {
-    case GTK_TREE_SORT_ASCENDING:
+    case GTK_SORT_ASCENDING:
       gtk_arrow_set (GTK_ARROW (arrow),
 		     GTK_ARROW_DOWN,
 		     GTK_SHADOW_IN);
       break;
 
-    case GTK_TREE_SORT_DESCENDING:
+    case GTK_SORT_DESCENDING:
       gtk_arrow_set (GTK_ARROW (arrow),
 		     GTK_ARROW_UP,
 		     GTK_SHADOW_IN);
@@ -764,7 +764,7 @@ gtk_tree_view_model_sort_column_changed (GtkTreeSortable   *sortable,
 					  GtkTreeViewColumn *column)
 {
   gint sort_column_id;
-  GtkTreeSortOrder order;
+  GtkSortType order;
 
   if (gtk_tree_sortable_get_sort_column_id (sortable,
 					    &sort_column_id,
@@ -792,14 +792,14 @@ gtk_tree_view_column_sort (GtkTreeViewColumn *tree_column,
 
   if (tree_column->show_sort_indicator)
     {
-      if (tree_column->sort_order == GTK_TREE_SORT_ASCENDING)
-	gtk_tree_view_column_set_sort_order (tree_column, GTK_TREE_SORT_DESCENDING);
+      if (tree_column->sort_order == GTK_SORT_ASCENDING)
+	gtk_tree_view_column_set_sort_order (tree_column, GTK_SORT_DESCENDING);
       else
-	gtk_tree_view_column_set_sort_order (tree_column, GTK_TREE_SORT_ASCENDING);
+	gtk_tree_view_column_set_sort_order (tree_column, GTK_SORT_ASCENDING);
     }
   else
     {
-      gtk_tree_view_column_set_sort_order (tree_column, GTK_TREE_SORT_ASCENDING);
+      gtk_tree_view_column_set_sort_order (tree_column, GTK_SORT_ASCENDING);
       gtk_tree_view_column_set_sort_indicator (tree_column, TRUE);
     }
 
@@ -839,7 +839,7 @@ gtk_tree_view_column_setup_sort_column_id_callback (GtkTreeViewColumn *tree_colu
       tree_column->sort_column_id != -1)
     {
       gint real_sort_column_id;
-      GtkTreeSortOrder real_order;
+      GtkSortType real_order;
 
       if (tree_column->sort_column_changed_signal == 0)
 	tree_column->sort_column_changed_signal =
@@ -1883,7 +1883,7 @@ gtk_tree_view_column_set_sort_column_id (GtkTreeViewColumn *tree_column,
 	  tree_column->sort_column_changed_signal = 0;
 	}
 
-      gtk_tree_view_column_set_sort_order (tree_column, GTK_TREE_SORT_ASCENDING);
+      gtk_tree_view_column_set_sort_order (tree_column, GTK_SORT_ASCENDING);
       gtk_tree_view_column_set_sort_indicator (tree_column, FALSE);
       return;
     }
@@ -1978,7 +1978,7 @@ gtk_tree_view_column_get_sort_indicator  (GtkTreeViewColumn     *tree_column)
  **/
 void
 gtk_tree_view_column_set_sort_order      (GtkTreeViewColumn     *tree_column,
-                                          GtkTreeSortOrder       order)
+                                          GtkSortType            order)
 {
   g_return_if_fail (GTK_IS_TREE_VIEW_COLUMN (tree_column));
 
@@ -1998,7 +1998,7 @@ gtk_tree_view_column_set_sort_order      (GtkTreeViewColumn     *tree_column,
  * 
  * Return value: the sort order the sort indicator is indicating
  **/
-GtkTreeSortOrder
+GtkSortType
 gtk_tree_view_column_get_sort_order      (GtkTreeViewColumn     *tree_column)
 {
   g_return_val_if_fail (GTK_IS_TREE_VIEW_COLUMN (tree_column), 0);
